# CPPSystemMonitor

./: CMakeLists.txt  README.md
include/: constants.h  linux_parser.hpp  ncurses_display.hpp  process.hpp  processor.hpp  system.hpp  util.hpp
src/: CMakeLists.txt  linux_parser.cpp  main.cpp  ncurses_display.cpp  process.cpp  processor.cpp  system.cpp  util.cpp
system-monitor/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  catch2.h  validate_parser.cpp
